Fix alignment

--- a/src/Content.css
+++ b/src/Content.css
@@ -2,6 +2,6 @@
   position: fixed;
   width: 400px;
   animation-name: moveTile;
-  animation-duration: 0.5s;
+  animation-duration: 0.3s;
   animation-fill-mode: forwards;
 }
