--- a/src/Main.css
+++ b/src/Main.css
@@ -54,4 +54,12 @@ a:hover, button:hover, a:focus, button:focus {
   width: 100%;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
+
+  /* Hide scrollbar (https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp) */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.App::-webkit-scrollbar {
+  display: none;
 }
